# Neverlose-3.3-CS-GO-src

./: .gitignore  README.md  neverlose.sln
analysis/: PROTOCOL.md  REPORT.md
analysis/output/: all_decrypted_strings.json  decrypted_routes.json  emulation_v2.json  ghidra_results.txt  phase1_log.txt  phase1_results.json  phase3_log.txt  phase4a_log.txt  (+10 more)
injector/: injector.vcxproj  main.cpp
neverlose/: ArenaAllocator.h  FindPattern.cpp  FindPattern.h  HookFn.cpp  HookFn.h  KUSER_SHARED_DATA_SPOOF.h  PEB_SPOOF.h  REGS.h  ROADMAP.txt  Requestor.cpp  VEH.cpp  cpuid_emu_0.h  cpuid_emulator.h  crypto_capture.cpp  csgo_mini.h  diskpas.h  entry.cpp  errors.txt  fix_cvars.cpp  fix_dump.cpp  fix_imports.cpp  fix_interfaces.cpp  fix_signatures.cpp  internal_fixes.h  json.hpp  logger.h  main.cpp  mem_dispatcher.cpp  neverlose.cpp  neverlose.h  neverlose.rc  neverlose.vcxproj  neverlose.vcxproj.filters  neverlosesdk.hpp  nops.h  resource.h  setup_hooks.cpp  sha256.cpp  spoof.cpp  spoof_cpuid.cpp  (+2 more)
server/: http_server.py  test_servers.py  wss_server.py
server/rust-server/: Cargo.toml  README.md  module.fbs
server/rust-server/migrations/: 001_initial.sql  002_languages_json_preserve_order.sql  003_scripts.sql
server/rust-server/nl_parser/: Cargo.toml  build.rs
server/rust-server/nl_parser/src/: flatbuf.rs  lib.rs  localization.rs  module.rs  pipeline.rs  skin_data.rs
server/rust-server/nl_parser/src/flatcc_builder/: frame.rs  mod.rs
server/rust-server/src/: client_msg.rs  config.rs  data.rs  db.rs  error.rs  http.rs  main.rs  models.rs  module_builder.rs  tls.rs  ws.rs
(+19 files in other folders)
